# imageshrink

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.cpp.old  settings.h  usage.h
src/core/image/: ImageBuffer.h  ImageCollection.cpp  ImageCollection.h  ImageDummy.cpp  ImageDummy.h  ImageInterface.h  ImageJfif.cpp  ImageJfif.h  ImageJfif_markers.cpp
src/core/image/helper/: PlanarImageCalc.cpp  PlanarImageCalc.h
src/core/transformation/: CMakeLists.txt  ImageAverage.cpp  ImageAverage.h  ImageCovariance.cpp  ImageCovariance.h  ImageDSSIM.cpp  ImageDSSIM.h  ImageVariance.cpp  ImageVariance.h
src/types/: enumBitsPerPixelAndChannel.h  enumChrominanceSubsampling.h  enumColorspace.h  enumPixelFormat.h  stringShrdPtr.h
